--- a/contenu/menu-a-la-francaise/menu_a_la_francaise.html
+++ b/contenu/menu-a-la-francaise/menu_a_la_francaise.html
@@ -10,88 +10,158 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__logo"><img src="../../img/logo/ohmyfood.png" alt="logo ohmyfood"></div>
+        <a href="../../index.html">
+            <i class="fa-solid fa-arrow-left"></i>
+        </a>
+        <div class="header__logo">
+            <img src="../../img/logo/ohmyfood.png" alt="logo ohmyfood">
+        </div>
     </header>
     <main>
-        <img src="../../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-        <div>
-            <div>
-                <h3>NOM</h3>
-                <a href="#"><i class="fa-regular fa-heart"></i></a>
+        <div class="head__img">
+            <img src="../../img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
+        </div>
+        <div class="menu">
+            <div class="menu__title">
+                <h3>À la française</h3>
+                <i class="fa-regular fa-heart heart-white"></i>
+                <i class="fa-solid fa-heart heart-colored heart-position-menu"></i>
             </div>
-            <div class="entree">
-                <h4>ENTRÉES</h4>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
+            <section class="menu__section">
+                <div class="menu__section--title">
+                    <h4>ENTRÉES</h4>
+                    <div class="menu__section--border"></div>
+                </div>
+                <div class="menu__section--flex">
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Tartare de poulpe acidulé</h2>
+                                <p>Aux zests d'orange</p>
+                            </div>
+                            <span>25€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Velouté de légumes d'antan</h2>
+                                <p>Carott, panais, topinambour</p>
+                            </div>
+                            <span>35€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Soupe à l'oignon</h2>
+                                <p>Revisitée</p>
+                            </div>
+                            <span>20€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
+            </section>
+            <section class="menu__section">
+                <div class="menu__section--title">
+                    <h4>PLATS</h4>
+                    <div class="menu__section--border"></div>
+                </div>
+                <div class="menu__section--flex">
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Coquilles Saint-Jacques</h2>
+                                <p>Accompagnées d'une puréé de panais</p>
+                            </div>
+                            <span>40€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Magret de canard</h2>
+                                <p>Et parmentier de pommes de terres</p>
+                            </div>
+                            <span>35€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Pigeonneau d'Ille-et-Vilaine</h2>
+                                <p>Sur son lit de gnocchis aux légumes</p>
+                            </div>
+                            <span>40€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
+            </section>
+            <section class="menu__section">
+                <div class="menu__section--title">
+                    <h4>DESSERTS</h4>
+                    <div class="menu__section--border"></div>
+                </div>
+                <div class="menu__section--flex">
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Pétales de violettes glacés</h2>
+                                <p>Et purée de noisettes</p>
+                            </div>
+                            <span>18€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Fondant au chocolat</h2>
+                                <p>Revisité</p>
+                            </div>
+                            <span>22€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Millefeuille croustillant</h2>
+                                <p>Myrtilles et pâte d'amande</p>
+                            </div>
+                            <span>23€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
                     </div>
                 </div>
+            </section>
+            <div class="button button--pink">
+                <button>Commander</button>
             </div>
-            <div class="meal">
-                <h4>PLATS</h4>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <div class="dessert">
-                <h4>DESSERTS</h4>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <button>Commander</button>
         </div>
     </main>
     <footer class="footer">
