--- a/contenu/menu-la-note-enchantee/menu_la_note_enchantee.html
+++ b/contenu/menu-la-note-enchantee/menu_la_note_enchantee.html
@@ -10,110 +10,173 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__logo"><img src="../../img/logo/ohmyfood.png" alt="logo ohmyfood"></div>
+        <a href="../../index.html">
+            <i class="fa-solid fa-arrow-left"></i>
+        </a>
+        <div class="header__logo">
+            <img src="../../img/logo/ohmyfood.png" alt="logo ohmyfood">
+        </div>
     </header>
     <main>
-        <img src="../../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
-        <div>
-            <div>
-                <h3>NOM</h3>
-                <a href="#"><i class="fa-regular fa-heart"></i></a>
+        <div class="head__img">
+            <img src="../../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="À la française">
+        </div>
+        <div class="menu">
+            <div class="menu__title">
+                <h3>La note enchantée</h3>
+                <i class="fa-regular fa-heart heart-white"></i>
+                <i class="fa-solid fa-heart heart-colored heart-position-menu"></i>
             </div>
-            <div class="entree">
-                <h4>ENTRÉES</h4>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
+            <section class="menu__section">
+                <div class="menu__section--title">
+                    <h4>ENTRÉES</h4>
+                    <div class="menu__section--border"></div>
+                </div>
+                <div class="menu__section--flex">
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Ravioles de foie gras</h2>
+                                <p>Accompagnés de leur crème à la truffe</p>
+                            </div>
+                            <span>25€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Caviar de foie gras</h2>
+                                <p>Sur blini à la farine de blé noir</p>
+                            </div>
+                            <span>35€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Homard et espuma de potiron</h2>
+                                <p>Mariné aux zestes d'orange</p>
+                            </div>
+                            <span>20€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Foie gras de canard cuit entier</h2>
+                                <p>Confiture de figue et pain toasté</p>
+                            </div>
+                            <span>35€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
+            </section>
+            <section class="menu__section">
+                <div class="menu__section--title">
+                    <h4>PLATS</h4>
+                    <div class="menu__section--border"></div>
+                </div>
+                <div class="menu__section--flex">
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Noix de coquilles Saint-Jacques</h2>
+                                <p>Sur lit de purée de céleri-rave</p>
+                            </div>
+                            <span>40€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Langoustine poêlée</h2>
+                                <p>Purée de patate douce</p>
+                            </div>
+                            <span>35€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Mijoté de queue de boeuf</h2>
+                                <p>Et riz sauvage aux zests de citron</p>
+                            </div>
+                            <span>44€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
+            </section>
+            <section class="menu__section">
+                <div class="menu__section--title">
+                    <h4>DESSERTS</h4>
+                    <div class="menu__section--border"></div>
+                </div>
+                <div class="menu__section--flex">
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Macaron noisette et chocolat</h2>
+                                <p>Glace au caramel brun et sel de Guérande</p>
+                            </div>
+                            <span>18€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Baba au rhum revisité</h2>
+                                <p>Avec son coulis de citron</p>
+                            </div>
+                            <span>22€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Tarte au citron meringuée</h2>
+                                <p>Destructurée</p>
+                            </div>
+                            <span>23€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
+            </section>
+            <div class="button button--pink">
+                <button>Commander</button>
             </div>
-            <div class="meal">
-                <h4>PLATS</h4>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <div class="dessert">
-                <h4>DESSERTS</h4>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <button>Commander</button>
         </div>
     </main>
     <footer class="footer">
-        <h3 class="footer__title">ohmyfood</h3>
-        <div class="footer-space">
-            <i class="fa-solid fa-utensils"></i>
-            <a href="#"><p>Proposer un restaurant</p></a>
-        </div>
-        <div class="footer-space">
-            <i class="fa-solid fa-handshake"></i>
-            <a href="#"><p>Devenir partenaire</p></a>
-        </div>
-        <a href="#"><p class="footer-space">Mentions légales</p></a>
-        <a href="#"><p class="footer-space">Contact</p></a>
-    </footer><footer class="footer">
         <h3 class="footer__title">ohmyfood</h3>
         <div class="footer-space">
             <i class="fa-solid fa-utensils"></i>
