--- a/contenu/menu-la-palette-du-gout/menu_la_palette_du_gout.html
+++ b/contenu/menu-la-palette-du-gout/menu_la_palette_du_gout.html
@@ -10,88 +10,158 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__logo"><img src="../../img/logo/ohmyfood.png" alt="logo ohmyfood"></div>
+        <a href="../../index.html">
+            <i class="fa-solid fa-arrow-left"></i>
+        </a>
+        <div class="header__logo">
+            <img src="../../img/logo/ohmyfood.png" alt="logo ohmyfood">
+        </div>
     </header>
     <main>
-        <img src="../../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
-        <div>
-            <div>
-                <h3>NOM</h3>
-                <a href="#"><i class="fa-regular fa-heart"></i></a>
+        <div class="head__img">
+            <img src="../../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="À la française">
+        </div>
+        <div class="menu">
+            <div class="menu__title">
+                <h3>La palette du goût</h3>
+                <i class="fa-regular fa-heart heart-white"></i>
+                <i class="fa-solid fa-heart heart-colored heart-position-menu"></i>
             </div>
-            <div class="entree">
-                <h4>ENTRÉES</h4>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
+            <section class="menu__section">
+                <div class="menu__section--title">
+                    <h4>ENTRÉES</h4>
+                    <div class="menu__section--border"></div>
+                </div>
+                <div class="menu__section--flex">
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Fricassée d'escargot</h2>
+                                <p>Au pimet d'espelette</p>
+                            </div>
+                            <span>25€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Foie gras de canard mi-cuit</h2>
+                                <p>Et ses copeaux de truffe noire</p>
+                            </div>
+                            <span>35€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Oeuf au plat</h2>
+                                <p>Assaisonné à la truffe sur lit de caviar</p>
+                            </div>
+                            <span>20€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
+            </section>
+            <section class="menu__section">
+                <div class="menu__section--title">
+                    <h4>PLATS</h4>
+                    <div class="menu__section--border"></div>
+                </div>
+                <div class="menu__section--flex">
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Filet de boeuf aux herbes</h2>
+                                <p>Accompagné de sa ribambelle de légumes</p>
+                            </div>
+                            <span>40€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Parmentier de queu de boeuf</h2>
+                                <p>À la truffe noire sur sa purée de panais</p>
+                            </div>
+                            <span>35€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Filet de Turbot</h2>
+                                <p>Aux agrumes</p>
+                            </div>
+                            <span>44€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
+            </section>
+            <section class="menu__section">
+                <div class="menu__section--title">
+                    <h4>DESSERTS</h4>
+                    <div class="menu__section--border"></div>
+                </div>
+                <div class="menu__section--flex">
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Paris-Brest</h2>
+                                <p>Revisité</p>
+                            </div>
+                            <span>18€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Macaron au chocolat d'exception</h2>
+                                <p>Et glace à la vanille de Madagascar</p>
+                            </div>
+                            <span>22€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Mousse au chocolat</h2>
+                                <p>Au piment d'espelette et à la truffe noire</p>
+                            </div>
+                            <span>23€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
                     </div>
                 </div>
+            </section>
+            <div class="button button--pink">
+                <button>Commander</button>
             </div>
-            <div class="meal">
-                <h4>PLATS</h4>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <div class="dessert">
-                <h4>DESSERTS</h4>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <button>Commander</button>
         </div>
     </main>
     <footer class="footer">
