--- a/contenu/menu-le-delice-des-sens/menu_le_delice_des_sens.html
+++ b/contenu/menu-le-delice-des-sens/menu_le_delice_des_sens.html
@@ -10,88 +10,158 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__logo"><img src="../../img/logo/ohmyfood.png" alt="logo ohmyfood"></div>
+        <a href="../../index.html">
+            <i class="fa-solid fa-arrow-left"></i>
+        </a>
+        <div class="header__logo">
+            <img src="../../img/logo/ohmyfood.png" alt="logo ohmyfood">
+        </div>
     </header>
     <main>
-        <img src="../../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-        <div>
-            <div>
-                <h3>NOM</h3>
-                <a href="#"><i class="fa-regular fa-heart"></i></a>
+        <div class="head__img">
+            <img src="../../img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="À la française">
+        </div>
+        <div class="menu">
+            <div class="menu__title">
+                <h3>Le délice des sens</h3>
+                <i class="fa-regular fa-heart heart-white"></i>
+                <i class="fa-solid fa-heart heart-colored heart-position-menu"></i>
             </div>
-            <div class="entree">
-                <h4>ENTRÉES</h4>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
+            <section class="menu__section">
+                <div class="menu__section--title">
+                    <h4>ENTRÉES</h4>
+                    <div class="menu__section--border"></div>
+                </div>
+                <div class="menu__section--flex">
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Tartare de thon</h2>
+                                <p>Assaisonné au yuzu</p>
+                            </div>
+                            <span>25€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Bouchée de homard croustillant</h2>
+                                <p>Et sa farandole de petits légumes</p>
+                            </div>
+                            <span>35€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Velouté de cèpes</h2>
+                                <p>Aux truffes</p>
+                            </div>
+                            <span>20€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
+            </section>
+            <section class="menu__section">
+                <div class="menu__section--title">
+                    <h4>PLATS</h4>
+                    <div class="menu__section--border"></div>
+                </div>
+                <div class="menu__section--flex">
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Poulet rôti aux herbes de provence</h2>
+                                <p>Et sa crème de truffe</p>
+                            </div>
+                            <span>40€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Langouste rôtie</h2>
+                                <p>Et ses légumes de saison</p>
+                            </div>
+                            <span>35€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Côte de boeuf angus</h2>
+                                <p>Et sa purée de panais</p>
+                            </div>
+                            <span>44€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
+            </section>
+            <section class="menu__section">
+                <div class="menu__section--title">
+                    <h4>DESSERTS</h4>
+                    <div class="menu__section--border"></div>
+                </div>
+                <div class="menu__section--flex">
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Farandole de desserts</h2>
+                                <p>Du chef</p>
+                            </div>
+                            <span>18€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Crème brulée</h2>
+                                <p>Revisitée</p>
+                            </div>
+                            <span>22€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card--text">
+                            <div class="menu__card--flex">
+                                <h2>Tiramisu</h2>
+                                <p>À la noisette</p>
+                            </div>
+                            <span>23€</span>   
+                        </div>
+                        <div class="menu__card--checkbloc">
+                            <i class="fa-solid fa-check check-icon"></i>
+                        </div>
                     </div>
                 </div>
+            </section>
+            <div class="button button--pink">
+                <button>Commander</button>
             </div>
-            <div class="meal">
-                <h4>PLATS</h4>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <div class="dessert">
-                <h4>DESSERTS</h4>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-                <div>
-                    <h2></h2>
-                    <div>
-                        <p></p>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <button>Commander</button>
         </div>
     </main>
     <footer class="footer">
