--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="prev__reservation">
                 <h1>Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                <button>Explorer nos restaurants</button>
+                <button class="button--pink">Explorer nos restaurants</button>
             </div>
 
         </div>
@@ -46,7 +46,7 @@
         <div class="restaurant">
             <h1 class="restaurant__title">Restaurants</h1>
             <div class="restaurant__card">
-                <a href="#">
+                <a href="./contenu/menu-la-palette-du-gout/menu_la_palette_du_gout.html">
                     <p class="restaurant__card-notif">Nouveau</p>
                     <img src="./img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du goût">
                     <div class="restaurant__card-text">
@@ -54,12 +54,13 @@
                             <h2>La palette du goût</h2>
                             <p>Ménilmontant</p>
                         </div>
-                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <i class="fa-regular fa-heart heart-white"></i>
+                        <i class="fa-solid fa-heart heart-colored heart-position-index"></i>
                     </div>
                 </a>
             </div>
             <div class="restaurant__card">
-                <a href="#">
+                <a href="./contenu/menu-la-note-enchantee/menu_la_note_enchantee.html">
                     <p class="restaurant__card-notif">Nouveau</p>
                     <img src="./img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la note enchantée">
                     <div class="restaurant__card-text">
@@ -67,31 +68,34 @@
                             <h2>La note enchantée</h2>
                             <p>Charonne</p>
                         </div>
-                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <i class="fa-regular fa-heart heart-white"></i>
+                        <i class="fa-solid fa-heart heart-colored heart-position-index"></i>
                     </div>
                 </a>
             </div>
             <div class="restaurant__card">
-                <a href="#">
+                <a href="./contenu/menu-a-la-francaise/menu_a_la_francaise.html">
                     <img src="./img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
                     <div class="restaurant__card-text">
                         <div>
                             <h2>À la française</h2>
                             <p>Cité Rouge</p>
                         </div>
-                        <a href="#"><i class="fa-regular fa-heart"></i></a> 
+                        <i class="fa-regular fa-heart heart-white"></i>
+                        <i class="fa-solid fa-heart heart-colored heart-position-index"></i>
                     </div>
                 </a>
             </div>
             <div class="restaurant__card">
-                <a href="#">
+                <a href="./contenu/menu-le-delice-des-sens/menu_le_delice_des_sens.html">
                     <img src="./img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                     <div class="restaurant__card-text">
                         <div>
                             <h2>Le délice des sens</h2>
                             <p>Folie-Méricourt</p>
                         </div>
-                        <a href="#"><i class="fa-regular fa-heart"></i></a>
+                        <i class="fa-regular fa-heart heart-white"></i>
+                        <i class="fa-solid fa-heart heart-colored heart-position-index"></i>
                     </div>
                 </a>
             </div>
